some categories are added

--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -2,8 +2,8 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background-color: #f0f2f5;
-    color: #333;
+    background-color: red;
+
     margin: 0;
     padding: 0;
 }
