--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -11,9 +11,10 @@
 <style>
     body{
         font-family: "Poppins", sans-serif;
+        background-color: red;
     }
 </style>
-<body class="bg-light">
+<body class="" style="background-color: #f3f6f4;">
     {% include 'blog/header.html' %}
     <div class="container my-4">
         {% block content %}{% endblock %}
