--- a/myblog/templates/blog/create_post.html
+++ b/myblog/templates/blog/create_post.html
@@ -1,15 +1,13 @@
-{% extends "blog/base.html" %} {% block title %}Create Post{% endblock %} 
+{% extends "blog/base.html" %} {% block title %}Create Post{% endblock %}
 {%block content %}
-<div
-  style="
+<div style="
     background: #fafafa;
     padding: 20px;
     margin: 20px auto;
     max-width: 500px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  "
->
+  ">
   <h4>Create New Post</h4>
   <form method="POST">
     {% csrf_token %}
@@ -17,6 +15,7 @@
       <label for="title">Title:</label>
       <input type="text" class="form-control" id="title" name="title" />
     </div>
+    {{form.as_p}}
     <div class="mb-3">
       <label for="content">Content:</label>
       <textarea id="content" class="form-control" rows="4" name="content"></textarea>
