--- a/myblog/templates/blog/header.html
+++ b/myblog/templates/blog/header.html
@@ -17,6 +17,20 @@
   
           <li>
             <a class="nav-link " href="{% url 'create_post' %}">Make Your Post</a>
+            
+          </li>
+          <li>
+            <a class="nav-link" href="{% url 'category_tech'%}">Tech</a>
+          </li>
+          <li>
+            <a class="nav-link" href="{% url 'category_news'%}">News</a>
+          </li>
+          <li>
+            <a class="nav-link" href="{% url 'category_cinema'%}">Cinema</a>
+          </li>
+          
+          <li>
+            <a class="nav-link" href="{% url 'category_sport'%}">Sports</a>
           </li>
           {% else %}
           <li><a class="nav-link" href="{% url 'login' %}">Login</a></li>
