--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -1,72 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-body {
-    font-family: "Poppins", sans-serif;
-    background-color: red;
-
-    margin: 0;
-    padding: 0;
+:root{
+    --bg:#F2F2F2;
+    --nav:#000000;
 }
+
+body{
+    font-family: "Poppins", sans-serif;
+    background-color:red;
+    /* background-image: linear-gradient(to right, rgb(244, 127, 127) , rgb(244, 244, 42)); */
+}
+nav{
+    background-color: #F2F2F2;
+}
+
+
 *{
     margin: 0;
     padding: 0;
 }
-
-nav ul{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+.hover-scale{
+    transition: all 0.5s;
 }
-nav ul li{
-    
- 
+.hover-scale:hover{
+    transform: scale(1.05);
 }
 
-
-h1, h2, h3 {
-    color: #4CAF50;
-}
 
 ul {
     list-style: none;
     padding: 0;
 }
 
-
-
-ul li h2 {
-    margin-top: 0;
-    color: #333;
-}
-
-a {
-    color: #4CAF50;
-    text-decoration: none;
-}
-
 a:hover {
     text-decoration: underline;
 }
-
-
-
-
-
 
 small {
     color: #555;
 }
 
-a.button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: 10px;
-}
-
-a.button:hover {
-    background-color: #45a049;
+ul li{
+    padding-right: 10px;
 }
