--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -10,11 +10,11 @@
 </head>
 <style>
     body{
-        font-family: "Poppins", sans-serif;
-        background-color: red;
+        background-color: #F2F2F2;
     }
+   
 </style>
-<body class="" style="background-color: #f3f6f4;">
+<body >
     {% include 'blog/header.html' %}
     <div class="container my-4">
         {% block content %}{% endblock %}
