--- a/myblog/templates/blog/category.html
+++ b/myblog/templates/blog/category.html
@@ -1,14 +1,14 @@
 {% extends "blog/base.html" %} {% block title %}Create Post{% endblock %}
 {%block content %}
-<div style="
-    background: #fafafa;
-    padding: 20px;
-    margin: 20px auto;
-
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  ">
+<div>
     <h4>Category</h4>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="background-color: #F2F2F2;">
+          <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">{{name}}</li>
+        </ol>
+      </nav>
+      
     <ul class="p-0 m-0 d-flex flex-wrap gap-3">
         {% if not category %}
         <h3 class="text-danger py-2">No Post Posted Yet! in {{name}}</h3>
