--- a/myblog/templates/blog/header.html
+++ b/myblog/templates/blog/header.html
@@ -1,25 +1,25 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
+<nav class="navbar navbar-expand-lg bg-body-tertiary shadow navbar ">
   <div class="container">
     <div class="">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}"
+            <a class="nav-link active link-offset-3-hover ps-1" aria-current="page" href="{% url 'home' %}"
               >Home</a
             >
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'logout' %}"
+            <a class="nav-link link-offset-3-hover" aria-current="page" href="{% url 'logout' %}"
               >Logout</a
             >
           </li>
   
           <li>
-            <a class="nav-link " href="{% url 'create_post' %}">Make Your Post</a>
+            <a class="nav-link link-offset-3-hover " href="{% url 'create_post' %}">Make Your Post</a>
             
           </li>
-          <li>
+          <!-- <li>
             <a class="nav-link" href="{% url 'category_tech'%}">Tech</a>
           </li>
           <li>
@@ -31,7 +31,7 @@
           
           <li>
             <a class="nav-link" href="{% url 'category_sport'%}">Sports</a>
-          </li>
+          </li> -->
           {% else %}
           <li><a class="nav-link" href="{% url 'login' %}">Login</a></li>
           <li><a class="nav-link" href="{% url 'register' %}">Register</a></li>
