--- a/myblog/templates/blog/home.html
+++ b/myblog/templates/blog/home.html
@@ -1,12 +1,20 @@
 {% extends "blog/base.html" %} {% block title %}Home{% endblock %} {% block content %}
 <div>
-  <h4 class="px-2">Blog Posts</h4>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb " style="background-color: #F2F2F2;">
+      <li class="breadcrumb-item active" aria-current="page">Home</li>
+    </ol>
+  </nav>
   <div class="">
+    <button class="btn btn-secondary "><a class="text-decoration-none text-white" href="{% url 'category' tech %}">Tech</a></button>
+    <button class="btn btn-secondary"><a class="text-decoration-none text-white" href="{% url 'category' cinema %}">Cinema</a></button>
+    <button class="btn btn-secondary"><a class="text-decoration-none text-white" href="{% url 'category' news %}">News</a></button>
+    <button class="btn btn-secondary"><a class="text-decoration-none text-white" href="{% url 'category' sports %}">Sports</a></button>
     <ul class="p-0 m-0 d-flex flex-wrap gap-3" style="width:100%">
       
       {% for post in posts %}
 
-      <li class="p-0 py-4 px-3 m-0 rounded shadow bg-white my-2" style="width: 32%">
+      <li class="p-0 py-4 px-3 m-0 rounded shadow bg-white my-2 hover-scale" style="width: 32%">
         <a class="text-decoration-none text-black" href="{% url 'post' post.id %} ">
           <h4 class="text-success">{{ post.title }}</h4>
           <p>{{ post.content|truncatewords:20 }}</p>
