--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -1,10 +1,49 @@
 {% extends "blog/base.html" %} {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
-<div class="container mt-4">
-  <h1>{{ post.title }}</h1>
-  <p class="py-2">{{ post.content }}</p>
-  <small>By {{ post.author }} on {{ post.timestamp }}</small>
-  <br /><br />
-  <a href="{% url 'home' %}" class="btn btn-success text-decoration-none">Back to Home</a>
+<div class="container ">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb" style="background-color: #F2F2F2;">
+      <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+      <li class="breadcrumb-item"><a href="{% url 'category' post.category %}">{{ post.category }}</a></li>
+
+      <li class="breadcrumb-item active" aria-current="page">{{post.title}}</li>
+    </ol>
+  </nav>
+  <div class=" mt-4 d-flex gap-3">
+    <div class="bg-white rounded-3 ps-3 py-3  " style="width: 75%; ">
+      <h1>{{ post.title }}</h1>
+      <p class="py-2">{{ post.content }}</p>
+      <small>By {{ post.author }} on {{ post.timestamp }}</small>
+      <br /><br />
+      <a href="{% url 'home' %}" class="btn btn-success text-decoration-none"
+        >Back to Home</a
+      >
+    </div>
+    <div class="bg-white rounded-3  px-4 py-3 text-black" style="width: 30%;">
+      <div>
+        <h5>Related Posts</h5>
+       <span>
+        {% with related_found=False %}
+        {% for item in allPosts %}
+            {% if item.category == post_category and item.title != post.title %}
+                <a class="text-decoration-none text-black " href="{% url 'post' item.id %}">
+                <p class="p-0 mb-0 fw-semibold">{{ item.title }}</p>
+                <small class="p-0">{{ item.content|truncatewords:10 }}</small>
+                </a>
+                {% with related_found=True %}
+                    
+                {% endwith %}
+            {% endif %}
+        {% endfor %}
+       </span>
+      {% if not related_found %}
+          <p class="py-4 fw-semibold fs-5 text-secondary">No More Releted Post </p>
+      {% endif %}
+  {% endwith %}
+  
+        
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
